--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -2,17 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ----------------------------- Root Variables ----------------------------- */
 @layer base {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-size: auto;
-    font-weight: auto;
-  }
-
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -42,11 +33,15 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
 
-    --radius: 0.2rem;
+    --radius: 0.5rem; /* 8px */
 
     --success: 196 52% 74%;
     --warning: 34 89% 85%;
     --error: 10 100% 86%;
+
+    /* --------------------------- prose values --------------------------- */
+    --prose-body: 0.373 0.034 259.733;
+    --prose-headings: 0.21 0.034 264.665;
   }
 
   [data-theme='dark'] {
@@ -81,15 +76,45 @@
     --success: 196 100% 14%;
     --warning: 34 51% 25%;
     --error: 10 39% 43%;
+
+    /* --------------------------- prose values --------------------------- */
+    --prose-body: 0.6 0.02 260.21;
+    --prose-headings: 0.84 0 0;
   }
 }
 
+/* ------------------------------ Base Classes ------------------------------ */
 @layer base {
-  * {
-    @apply border-border;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: auto;
+    font-weight: auto;
   }
+
+  h1 {
+    font-size: 2.5rem;
+    font-weight: normal;
+    margin-bottom: 0.25em;
+  }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  /*
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+  */
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-border, currentColor);
   }
 }
 
