--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -1,6 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin 'tailwindcss-animate';
+@plugin '@tailwindcss/typography';
+@variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));
 
 /* ----------------------------- Root Variables ----------------------------- */
 @layer base {
@@ -39,7 +40,7 @@
     --warning: 34 89% 85%;
     --error: 10 100% 86%;
 
-    /* --------------------------- prose values --------------------------- */
+    /* -------------------- prose values --------------------- */
     --prose-body: 0.373 0.034 259.733;
     --prose-headings: 0.21 0.034 264.665;
   }
@@ -77,9 +78,72 @@
     --warning: 34 51% 25%;
     --error: 10 39% 43%;
 
-    /* --------------------------- prose values --------------------------- */
+    /* -------------------- prose values --------------------- */
     --prose-body: 0.6 0.02 260.21;
     --prose-headings: 0.84 0 0;
+  }
+}
+
+/* ----------------------------- Theme Extend ----------------------------- */
+@theme {
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+
+  --radius-lg: var(--radius); /* 8px */
+  --radius-md: calc(var(--radius) - 2px); /* 6px */
+  --radius-sm: calc(var(--radius) - 4px); /* 4px */
+
+  --color-accent: hsl(var(--accent));
+  --color-accent-foreground: hsl(var(--accent-foreground));
+
+  --color-background: hsl(var(--background));
+  --color-border: hsla(var(--border));
+
+  --color-card: hsl(var(--card));
+  --color-card-foreground: hsl(var(--card-foreground));
+
+  --color-destructive: hsl(var(--destructive));
+  --color-destructive-foreground: hsl(var(--destructive-foreground));
+
+  --color-foreground: hsl(var(--foreground));
+  --color-input: hsl(var(--input));
+
+  --color-muted: hsl(var(--muted));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+
+  --color-popover: hsl(var(--popover));
+  --color-popover-foreground: hsl(var(--popover-foreground));
+
+  --color-primary: hsl(var(--primary));
+  --color-primary-foreground: hsl(var(--primary-foreground));
+
+  --color-ring: hsl(var(--ring));
+
+  --color-secondary: hsl(var(--secondary));
+  --color-secondary-foreground: hsl(var(--secondary-foreground));
+
+  --color-success: hsl(var(--success));
+  --color-error: hsl(var(--error));
+  --color-warning: hsl(var(--warning));
+
+  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-geist-sans);
+
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--radix-accordion-content-height);
+    }
+  }
+  @keyframes accordion-up {
+    from {
+      height: var(--radix-accordion-content-height);
+    }
+    to {
+      height: 0;
+    }
   }
 }
 
@@ -125,4 +189,145 @@ html {
 html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
+}
+
+/* ----------------------------- Utility Classes ---------------------------- */
+@utility container {
+  @media (width >= theme(--breakpoint-sm)) {
+    max-width: none;
+  }
+  margin-inline: auto;
+  padding-inline: 1.5rem;
+  max-width: 100vw;
+
+  @media (width >= 40rem) {
+    /* 640px */
+    max-width: 40rem;
+    padding-inline: 1rem;
+  }
+  @media (width >= 48rem) {
+    /* 768px */
+    max-width: 48rem;
+    padding-inline: 2rem;
+  }
+  @media (width >= 64rem) {
+    /* 1024px */
+    max-width: 64rem;
+    padding-inline: 2rem;
+  }
+  @media (width >= 80rem) {
+    /* 1280px */
+    max-width: 80rem;
+    padding-inline: 2rem;
+  }
+  @media (width >= 86rem) {
+    /* 1376px */
+    max-width: 86rem;
+    padding-inline: 2rem;
+  }
+}
+
+/* Safelisted utility classes */
+@layer utilities {
+  .lg\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+  .lg\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+  .lg\:col-span-8 {
+    grid-column: span 8 / span 8;
+  }
+  .lg\:col-span-12 {
+    grid-column: span 12 / span 12;
+  }
+  .border-border {
+    border-color: var(--color-border);
+  }
+  .bg-card {
+    background-color: var(--color-card);
+  }
+  .border-error {
+    border-color: var(--color-error);
+  }
+  .bg-error\/30 {
+    background-color: hsl(var(--error) / 0.3);
+  }
+  .border-success {
+    border-color: var(--color-success);
+  }
+  .bg-success\/30 {
+    background-color: hsl(var(--success) / 0.3);
+  }
+  .border-warning {
+    border-color: var(--color-warning);
+  }
+  .bg-warning\/30 {
+    background-color: hsl(var(--warning) / 0.3);
+  }
+}
+
+@utility prose {
+  color: var(--tw-prose-body);
+  --tw-prose-body: oklch(var(--prose-body));
+  --tw-prose-headings: oklch(var(--prose-headings));
+  --tw-prose-lead: oklch(0.446 0.03 256.802);
+  --tw-prose-links: oklch(0.21 0.034 264.665);
+  --tw-prose-bold: oklch(0.21 0.034 264.665);
+  --tw-prose-counters: oklch(0.551 0.027 264.364);
+  --tw-prose-bullets: oklch(0.872 0.01 258.338);
+  --tw-prose-hr: oklch(0.928 0.006 264.531);
+  --tw-prose-quotes: oklch(0.21 0.034 264.665);
+  --tw-prose-quote-borders: oklch(0.928 0.006 264.531);
+  --tw-prose-captions: oklch(0.551 0.027 264.364);
+  --tw-prose-kbd: oklch(0.21 0.034 264.665);
+  --tw-prose-kbd-shadows: NaN NaN NaN;
+  --tw-prose-code: oklch(0.21 0.034 264.665);
+  --tw-prose-pre-code: oklch(0.928 0.006 264.531);
+  --tw-prose-pre-bg: oklch(0.278 0.033 256.848);
+  --tw-prose-th-borders: oklch(0.872 0.01 258.338);
+  --tw-prose-td-borders: oklch(0.928 0.006 264.531);
+  --tw-prose-invert-body: oklch(0.872 0.01 258.338);
+  --tw-prose-invert-headings: #fff;
+  --tw-prose-invert-lead: oklch(0.707 0.022 261.325);
+  --tw-prose-invert-links: #fff;
+  --tw-prose-invert-bold: #fff;
+  --tw-prose-invert-counters: oklch(0.707 0.022 261.325);
+  --tw-prose-invert-bullets: oklch(0.446 0.03 256.802);
+  --tw-prose-invert-hr: oklch(0.373 0.034 259.733);
+  --tw-prose-invert-quotes: oklch(0.967 0.003 264.542);
+  --tw-prose-invert-quote-borders: oklch(0.373 0.034 259.733);
+  --tw-prose-invert-captions: oklch(0.707 0.022 261.325);
+  --tw-prose-invert-kbd: #fff;
+  --tw-prose-invert-kbd-shadows: 255 255 255;
+  --tw-prose-invert-code: #fff;
+  --tw-prose-invert-pre-code: oklch(0.872 0.01 258.338);
+  --tw-prose-invert-pre-bg: #00000080;
+  --tw-prose-invert-th-borders: oklch(0.446 0.03 256.802);
+  --tw-prose-invert-td-borders: oklch(0.373 0.034 259.733);
+  max-width: 65ch;
+  font-size: 1rem;
+  line-height: 1.75;
+}
+
+@utility not-prose {
+  color: var(--tw-prose-headings);
+}
+
+/* typography new */
+@utility heading-1 {
+  font-size: 2.25em;
+  font-weight: 500;
+  line-height: 1.15;
+}
+
+@utility layout-wrapper {
+  display: grid;
+  grid-template-rows:
+    auto /* header */
+    1fr /* main */
+    auto; /* footer */
+}
+@utility min-h-fallback {
+  min-height: 100vh;
 }
