--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -229,7 +229,7 @@ html[data-theme='light'] {
 
 /* Safelisted utility classes */
 @layer utilities {
-  .lg\:col-span-4 {
+  /* .lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }
   .lg\:col-span-6 {
@@ -240,7 +240,7 @@ html[data-theme='light'] {
   }
   .lg\:col-span-12 {
     grid-column: span 12 / span 12;
-  }
+  } */
   .border-border {
     border-color: var(--color-border);
   }
