--- a/src/CMS/Docs/Component.module.scss
+++ b/src/CMS/Docs/Component.module.scss
@@ -8,6 +8,36 @@
     }
   }
 
+  &__content {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    gap: 2rem;
+    margin-top: 2rem;
+  }
+
+  &__sidebar {
+    border-right: 1px solid var(--theme-elevation-100);
+    padding-right: 1rem;
+
+    & ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    &-item {
+      padding: 0.75rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-bottom: 0.5rem;
+      font-weight: 500;
+
+      &--active {
+        background: var(--theme-elevation-100);
+      }
+    }
+  }
+
   & a:hover {
     opacity: 0.85;
   }
