chore: refactor documentation structure; rename 'Getting Started' to 'Docs'; implement new tabs for Collections and Deployment

--- a/src/CMS/Docs/Component.module.scss
+++ b/src/CMS/Docs/Component.module.scss
@@ -1,6 +1,6 @@
 .before-dashboard {
-  margin: base(1.5);
-  margin: var(--gutter-h);
+  margin-inline: base(1.5);
+  margin-inline: var(--gutter-h);
 
   &__banner {
     & h2 {
