feat(globals): add MainMenu and Footer globals; update AdminAvatar styles

--- a/src/CMS/_components/AdminAvatar/index.module.scss
+++ b/src/CMS/_components/AdminAvatar/index.module.scss
@@ -12,7 +12,7 @@
   user-select: none;
 
   &__text {
-    text-decoration: none;
+    text-decoration: none !important;
     display: block;
   }
 
