--- a/src/blocks/StickyHighlights/Highlight/index.module.scss
+++ b/src/blocks/StickyHighlights/Highlight/index.module.scss
@@ -23,14 +23,14 @@
 
     .animate-enter-active,
     .animate-enter-done {
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
       opacity: 1;
       visibility: visible;
       transition: all 750ms;
     }
 
     .animate-exit {
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
       opacity: 1;
       visibility: visible;
     }
@@ -54,14 +54,14 @@
 
     .animate-enter-active,
     .animate-enter-done {
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
       opacity: 1;
       visibility: visible;
       transition: all 750ms;
     }
 
     .animate-exit {
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
       opacity: 1;
       visibility: visible;
     }
@@ -108,7 +108,8 @@
   }
 }
 
-.crosshairTopRight, .crosshairBottomRight {
+.crosshairTopRight,
+.crosshairBottomRight {
   position: absolute;
   width: 1rem;
   height: auto;
@@ -117,13 +118,13 @@
 }
 
 .crosshairTopRight {
-  top: -.5rem;
-  right: -.5rem;
+  top: -0.5rem;
+  right: -0.5rem;
 }
 
 .crosshairBottomRight {
-  bottom: -.5rem;
-  right: -.5rem;
+  bottom: -0.5rem;
+  right: -0.5rem;
 }
 
 .scanlineDesktop {
@@ -166,7 +167,7 @@
     pointer-events: initial;
     top: auto;
     bottom: auto;
-    transform: translate3d(0,0,0) !important;
+    transform: translate3d(0, 0, 0) !important;
     opacity: 1 !important;
     visibility: visible !important;
     padding: 0 !important;
@@ -206,7 +207,6 @@
   margin: 0 !important;
 }
 
-
 .centerCodeMedia {
   display: flex;
   align-items: center;
@@ -219,7 +219,11 @@
 .mediaInner {
   display: flex;
   width: 100%;
-  height: calc(100% - calc(var(--wrapper-padding-top) / 2 + var(--wrapper-padding-bottom) / 2));
+  height: calc(
+    100% - calc(
+        var(--wrapper-padding-top) / 2 + var(--wrapper-padding-bottom) / 2
+      )
+  );
 }
 
 .media {
